<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logoblur"
    tools:context=".AdminLog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="MissingConstraints">
        <LinearLayout

            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@color/white"
            >
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/admin" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="SIGN IN"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp"
             />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/enter_your_credentials"
            android:textColor="@color/black"
            android:textSize="20sp"
           />
        <EditText
            android:id="@+id/ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:gravity="start"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:gravity="start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textColorLink="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ID"
            tools:targetApi="o"
            />


        <Button
            android:id="@+id/SignBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimary"
            android:text="@string/log_in"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"

 />

        <!--<ProgressBar-->
            <!--android:id="@+id/progressbar"-->
            <!--android:layout_width="115dp"-->
            <!--android:layout_height="78dp"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:layout_marginStart="8dp"-->
            <!--android:layout_marginEnd="8dp"-->

            <!--android:layout_marginBottom="44dp" />-->
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>